--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="orange">#FB8500</color>
+    <color name="dark">#212529</color>
+    <color name="grey">#A5A2A2</color>
 </resources>
